# Mp3Record

./: README.md  build.gradle  settings.gradle
Mp3Record/: .gitignore  CMakeLists.txt  build.gradle
Mp3Record/src/androidTest/java/com/baiyuas/record/: ExampleInstrumentedTest.java
Mp3Record/src/main/: AndroidManifest.xml
Mp3Record/src/main/cpp/: CMakeLists.txt  lamemp3.cpp
Mp3Record/src/main/java/com/baiyuas/record/: DataEncodeThread.java  Lame.java  MediaPlayUtil.java  Mp3Record.java  Mp3RecordListener.java  Mp3Util.java
Mp3Record/src/test/java/com/baiyuas/record/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/com/baiyuas/media/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/baiyuas/media/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/test/java/com/baiyuas/media/: ExampleUnitTest.java
distribution/release/include/cryptopp/: config_misc.h  misc.h
gradle/wrapper/: gradle-wrapper.properties
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/baiyuas/media/: App.java  BaseDialogFragment.java  MainActivity.java  OnRecordListener.java  (+1 more)
sample/src/main/res/drawable/: ic_play.xml  ic_stop.xml  icon_record.xml  record_bg.xml  record_button_bg.xml  shape_dialog_top.xml
sample/src/main/res/layout/: activity_main.xml  dialog_fragment_record.xml  record_item_layout.xml
sample/src/main/res/values/: colors.xml  strings.xml  themes.xml
sample/src/main/res/values-night/: themes.xml
(+4 files in other folders)
